samples/_failures_safe/1761452667_79e98d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6ed1779.c: In function ‘matrix_determinant_helper’:
./samples/SAFE/__tmp_b6ed1779.c:147:5: error: expected declaration or statement at end of input
  147 |     submat.cols = n - 1;
      |     ^~~~~~
